# auto-ascii

./: LICENSE  README.md  example.py  example_unicode.py  example_video.py  generate_presets.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
auto_ascii/: __init__.py  cli.py  converter.py  presets.py  video.py
auto_ascii.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_converter.py
